--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create prometheus user
-  user:
+  ansible.builtin.user:
     name: "{{ prometheus_user }}"
     system: yes
     shell: /bin/false
@@ -8,7 +8,7 @@
     create_home: no
 
 - name: Create prometheus directories
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     state: directory
     mode: '0755'
@@ -20,21 +20,21 @@
     - "{{ prometheus_config_dir }}"
 
 - name: Download Prometheus
-  get_url:
+  ansible.builtin.get_url:
     url: "{{ prometheus_release_url }}"
     dest: "{{ prometheus_tmp_dir }}/{{ prometheus_archive }}"
     mode: '0644'
     timeout: 60
 
 - name: Extract Prometheus
-  unarchive:
+  ansible.builtin.unarchive:
     src: "{{ prometheus_tmp_dir }}/{{ prometheus_archive }}"
     dest: "{{ prometheus_tmp_dir }}"
     remote_src: yes
     creates: "{{ prometheus_extract_dir }}/prometheus"
 
 - name: Copy Prometheus binary
-  copy:
+  ansible.builtin.copy:
     src: "{{ prometheus_extract_dir }}/prometheus"
     dest: "{{ prometheus_install_dir }}/prometheus"
     mode: '0755'
@@ -43,7 +43,7 @@
     remote_src: yes
 
 - name: Copy Prometheus configuration
-  template:
+  ansible.builtin.template:
     src: prometheus.yml.j2
     dest: "{{ prometheus_config_dir }}/prometheus.yml"
     mode: '0644'
@@ -52,21 +52,21 @@
   notify: restart prometheus
 
 - name: Create systemd service file
-  template:
+  ansible.builtin.template:
     src: prometheus.service.j2
     dest: "/etc/systemd/system/{{ prometheus_service_name }}.service"
     mode: '0644'
   notify: restart prometheus
 
 - name: Enable and start Prometheus
-  systemd:
+  ansible.builtin.systemd:
     name: "{{ prometheus_service_name }}"
     enabled: yes
     state: started
     daemon_reload: yes
 
 - name: Clean up temporary files
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     state: absent
   loop:
