--- a/roles/grafana/handlers/main.yml
+++ b/roles/grafana/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: restart grafana
-  systemd:
+  ansible.builtin.systemd:
     name: "{{ grafana_service_name }}"
     state: restarted
     daemon_reload: yes
