--- a/roles/mock_service/handlers/main.yml
+++ b/roles/mock_service/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: restart mock-service
-  systemd:
+  ansible.builtin.systemd:
     name: "{{ mock_service_name }}"
     state: restarted
     daemon_reload: yes
