--- a/roles/node_exporter/handlers/main.yml
+++ b/roles/node_exporter/handlers/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: restart node-exporter
-  systemd:
+  ansible.builtin.systemd:
     name: "{{ node_exporter_service_name }}"
     state: restarted
+    daemon_reload: yes
