fix: fix networking issues

--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -2,20 +2,17 @@
 # SSH user for all hosts (Vagrant default)
 ansible_user=vagrant
 
-# Vagrant default key
-ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
-
 # disables the SSH host key checking to avoid prompts during automation
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [app_servers]
-app-node ansible_host=192.168.56.11
+app-node ansible_host=127.0.0.1 ansible_port=2221 ansible_ssh_private_key_file=.vagrant/machines/app-node/virtualbox/private_key
 
 [database_servers]
-db-node ansible_host=192.168.56.12
+db-node ansible_host=127.0.0.1 ansible_port=2222 ansible_ssh_private_key_file=.vagrant/machines/db-node/virtualbox/private_key
 
 [monitoring_servers]
-monitor-node ansible_host=192.168.56.13
+monitor-node ansible_host=127.0.0.1 ansible_port=2223 ansible_ssh_private_key_file=.vagrant/machines/monitor-node/virtualbox/private_key
 
 [node_exporters]
 app-node
