--- a/playbooks/setup_database.yml
+++ b/playbooks/setup_database.yml
@@ -6,6 +6,13 @@
   hosts: database_servers
   become: yes
   gather_facts: yes
+  vars:
+    ansible_roles_path: "{{ playbook_dir }}/../roles"
+    # After loading vault.yml, assign the password variables
+    mariadb_root_password: "{{ vault_mariadb_root_password }}"
+    mariadb_monitoring_password: "{{ vault_mariadb_monitoring_password }}"
+  vars_files:
+    - "{{ playbook_dir }}/../group_vars/database_servers/vault.yml"
 
   roles:
     - { role: mariadb, tags: ['mariadb'] }
