--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -1,4 +1,17 @@
 ---
+- name: Validate required passwords are set
+  ansible.builtin.fail:
+    msg: |
+      Password validation failed:
+      - mariadb_root_password: {{ mariadb_root_password | default('NOT SET') }}
+      
+      This password MUST be overridden in group_vars, host_vars, or vault files.
+      Setting it to empty in defaults prevents accidental deployment with default passwords.
+  when: 
+    - (mariadb_root_password is not defined) or
+      (mariadb_root_password | length == 0)
+  tags: [mariadb, validation, always]
+
 - name: Update apt cache
   ansible.builtin.apt:
     update_cache: yes
@@ -29,7 +42,7 @@
   notify: restart mariadb
   tags: [mariadb, config]
 
-- name: Create MariaDB root password
+- name: Set MariaDB root password
   community.mysql.mysql_user:
     name: root
     host: localhost
@@ -38,38 +51,35 @@
     state: present
   tags: [mariadb, setup]
 
-- name: Create monitoring database
+- name: Create monitoring database (if enabled)
   community.mysql.mysql_db:
     name: "{{ mariadb_monitoring_database }}"
     state: present
     login_user: root
     login_password: "{{ mariadb_root_password }}"
-    login_host: localhost
+  when: mariadb_create_monitoring_db | default(true)
   tags: [mariadb, setup]
 
-- name: Create monitoring user with privileges
+- name: Create monitoring user (if enabled)
   community.mysql.mysql_user:
     name: "{{ mariadb_monitoring_user }}"
-    password: "{{ mariadb_monitoring_password }}"
-    priv: "{{ mariadb_monitoring_database }}.*:ALL"
     host: '%'
-    state: present
+    password: "{{ mariadb_monitoring_password | default(mariadb_root_password) }}"
+    priv: "{{ mariadb_monitoring_database }}.*:ALL"
     login_user: root
     login_password: "{{ mariadb_root_password }}"
-    login_host: localhost
+    state: present
+  when: mariadb_create_monitoring_user | default(true)
   tags: [mariadb, setup]
 
-- name: Create sample table for testing
-  community.mysql.mysql_query:
-    login_user: root
-    login_password: "{{ mariadb_root_password }}"
-    login_host: localhost
-    database: "{{ mariadb_monitoring_database }}"
-    query: |
-      CREATE TABLE IF NOT EXISTS system_metrics (
-        id INT AUTO_INCREMENT PRIMARY KEY,
-        metric_name VARCHAR(100) NOT NULL,
-        metric_value FLOAT NOT NULL,
-        timestamp TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-      );
+- name: Create sample table
+  ansible.builtin.shell: |
+    mysql -u root -p{{ mariadb_root_password }} -D {{ mariadb_monitoring_database }} <<-EOF
+    CREATE TABLE IF NOT EXISTS system_metrics (
+      id INT AUTO_INCREMENT PRIMARY KEY,
+      metric_name VARCHAR(100) NOT NULL,
+      metric_value FLOAT NOT NULL,
+      timestamp TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+    );
+    EOF
   tags: [mariadb, setup, sample-data]
