feat: update pytest.ini and conftest.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
-[tool:pytest]
+[pytest]
+log_cli = true
+log_cli_level = INFO
 markers =
     smoke: marks smoke tests (basic, critical tests)
     regression: marks regression tests
@@ -11,3 +13,9 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+
+# Environment variables for pytest/system-level configuration
+# Note: Test-specific environment variables should be placed in tests/.env file
+# This keeps system config (vault password) separate from test config (paths, ports, etc.)
+env =
+    ANSIBLE_VAULT_PASSWORD_FILE = .vault_pass
