--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -6,13 +6,13 @@ ansible_user=vagrant
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [app_servers]
-app-node ansible_host=127.0.0.1 ansible_port=2221 ansible_ssh_private_key_file=.vagrant/machines/app-node/virtualbox/private_key
+app-node ansible_host=127.0.0.1 ansible_port=2221 ansible_ssh_private_key_file=.vagrant/machines/app-node/virtualbox/private_key internal_ip=192.168.56.11
 
 [database_servers]
-db-node ansible_host=127.0.0.1 ansible_port=2222 ansible_ssh_private_key_file=.vagrant/machines/db-node/virtualbox/private_key
+db-node ansible_host=127.0.0.1 ansible_port=2222 ansible_ssh_private_key_file=.vagrant/machines/db-node/virtualbox/private_key internal_ip=192.168.56.12
 
 [monitoring_servers]
-monitor-node ansible_host=127.0.0.1 ansible_port=2223 ansible_ssh_private_key_file=.vagrant/machines/monitor-node/virtualbox/private_key
+monitor-node ansible_host=127.0.0.1 ansible_port=2223 ansible_ssh_private_key_file=.vagrant/machines/monitor-node/virtualbox/private_key internal_ip=192.168.56.13
 
 [node_exporters]
 app-node
