--- a/playbooks/setup_all.yml
+++ b/playbooks/setup_all.yml
@@ -2,15 +2,18 @@
 - name: Setup Complete Monitoring Stack
   hosts: localhost
   gather_facts: no
-  tasks:
-    - name: Setup database servers
-      ansible.builtin.import_playbook: setup_database.yml
 
-    - name: Setup app servers
-      ansible.builtin.import_playbook: setup_mock_service.yml
+- name: Setup common configuration on all nodes
+  ansible.builtin.import_playbook: setup_common.yml
 
-    - name: Setup monitoring servers
-      ansible.builtin.import_playbook: setup_monitoring.yml
+- name: Setup database servers
+  ansible.builtin.import_playbook: setup_database.yml
 
-    - name: Run health checks
-      ansible.builtin.import_playbook: monitoring_check.yml
+- name: Setup app servers
+  ansible.builtin.import_playbook: setup_mock_service.yml
+
+- name: Setup monitoring servers
+  ansible.builtin.import_playbook: setup_monitoring.yml
+
+- name: Run health checks
+  ansible.builtin.import_playbook: monitoring_check.yml
