--- a/roles/grafana/defaults/main.yml
+++ b/roles/grafana/defaults/main.yml
@@ -30,7 +30,7 @@ grafana_database_path: "/var/lib/grafana/grafana.db"
 
 # Authentication (password MUST be overridden in group_vars or vault)
 grafana_admin_user: "admin"
-grafana_admin_password: ""  # Set to empty to force explicit override
+# grafana_admin_password: ""  # Optional, defaults to root password if not set
 
 # Data sources
 grafana_prometheus_url: "http://localhost:9090"
